[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/images/effects/glow.png" type="Texture" id=1]
[ext_resource path="res://assets/images/effects/blue_flare.png" type="Texture" id=2]
[ext_resource path="res://game/pre-run/DifficultyButton.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 33
corner_radius_top_right = 33
corner_radius_bottom_right = 33
corner_radius_bottom_left = 33
corner_detail = 20

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.505882, 0.505882, 0.505882, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.305882, 0.305882, 0.305882, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 20

[sub_resource type="CanvasItemMaterial" id=6]
blend_mode = 2

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.270968, 0.709677, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=16]
resource_local_to_scene = true
emission_shape = 1
emission_sphere_radius = 12.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0, 1, 1, 1 )
color_ramp = SubResource( 8 )

[sub_resource type="CanvasItemMaterial" id=14]
blend_mode = 1

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.174194, 0.819355, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=15]
resource_local_to_scene = true
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 720.0
angle_random = 1.0
scale = 2.2
color = Color( 1, 0, 0, 1 )
color_ramp = SubResource( 12 )

[node name="DifficultyButton" type="Button"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 66, 66 )
focus_mode = 1
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 1 )
toggle_mode = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressedParticles" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 6 )
position = Vector2( 33, 33 )
amount = 40
preprocess = 2.0
process_material = SubResource( 16 )
texture = ExtResource( 1 )

[node name="HoverParticles" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
material = SubResource( 14 )
position = Vector2( 33, 33 )
amount = 2
preprocess = 2.0
speed_scale = 0.8
process_material = SubResource( 15 )
texture = ExtResource( 2 )

[connection signal="mouse_entered" from="." to="." method="_on_DifficultyButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_DifficultyButton_mouse_exited"]
[connection signal="toggled" from="." to="." method="_on_DifficultyButton_toggled"]
